# fight-drill

./: .gitignore  Makefile  README.md  index.html  pyproject.toml  pyscript.toml  requirements-dev.txt
.github/workflows/: deploy.yml
entregas/: entrega3-classes.md  entrega3-diagramas.md
src/: i18n.py  main.py
src/audio/: __init__.py  announcer.py  audio_engine.py  web_backends.py
src/domain/: __init__.py  call_mode.py  combo.py  custom_workout.py  drill_config.py  footwork_move.py  libraries.py
src/persistence/: __init__.py  app_state.py  storage_manager.py  web_backend.py
src/session/: __init__.py  combo_drill_session.py  drill_session.py  events.py  footwork_drill_session.py  round_timer_session.py  timing_drill_session.py
src/ui/: __init__.py  app_context.py  drill_timer.py  page.py  router.py
src/ui/pages/: __init__.py  combo_drill_page.py  combo_library_page.py  custom_workout_page.py  footwork_drill_page.py  footwork_move_page.py  home_page.py  round_timer_page.py  settings_page.py  timing_drill_page.py
tests/: fake_storage.py  test_announcer.py  test_app_state.py  test_audio_engine.py  test_combo.py  test_combo_drill_session.py  test_custom_workout.py  test_drill_config.py  test_footwork_drill_session.py  test_footwork_move.py  test_i18n.py  test_libraries.py  test_pages_render.py  test_round_timer_session.py  test_router.py  test_storage_manager.py  test_timing_drill_session.py
